--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Tarjeta de crédito válida</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <p>BanCode</p>
+    </header>
+    <main>
+      <section class="card">
+        <div class="card__info">
+          <p class="card__info-name">3456 2343 3565 7634</p>
+        </div>
+      </section>
+      <section class="form">
+        <form>
+          <label for="cardNumber">Número de tarjeta</label>
+          <input type="number" name="cardNumber">
+        </form>
+        <button>Agregar</button>
+      </section>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
