ADD: estilos de tarjeta

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
       </section>
       <section class="form">
         <form>
-          <label for="cardNumber">Número de tarjeta</label>
-          <input type="number" name="cardNumber">
+          <label for="cardNumber" class="cardNumber">Número de tarjeta</label>
+          <input type="text" name="cardNumber">
+          <button>Agregar</button>
         </form>
-        <button>Agregar</button>
       </section>
     </main>
     <footer></footer>
