GET: input value

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       <section class="form">
         <form>
           <label for="cardNumber" class="cardNumber">Número de tarjeta</label>
-          <input type="text" name="cardNumber">
-          <button>Agregar</button>
+          <input type="text" name="cardNumber" class="numberCard" maxlength="16">
+          <button class="btn">Agregar</button>
         </form>
       </section>
     </main>
