ADD: manejo de estilos desde js

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <form>
           <label for="cardNumber" class="cardNumber">Número de tarjeta</label>
           <input type="text" name="cardNumber" class="numberCard" maxlength="13">
+          <span class="errorText">Número de tarjeta incorrecto.</span>
           <button class="btn">Agregar</button>
         </form>
       </section>
