DELETE: limite de numeros

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <section class="form">
         <form>
           <label for="cardNumber" class="cardNumber">Número de tarjeta</label>
-          <input type="text" name="cardNumber" class="numberCard" maxlength="13">
+          <input type="text" name="cardNumber" class="numberCard">
           <span class="errorText">Número de tarjeta incorrecto.</span>
           <button class="btn">Agregar</button>
         </form>
