ADD: estilos en card, imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,30 @@
     <main>
       <section class="card">
         <div class="card__info">
-          <p class="card__info-name"></p>
+          <div class="card__info-card">
+            <img src="./visa.png" alt="card">
+          </div>
+          <div class="card__info-chip">
+            <img src="./chip.png" alt="chip">
+          </div>
+          <div class="card__info-number-card">
+
+            <p class="card__info-number"></p>
+          </div>
+          <div class="card__info-data">
+            <div class="card__info-data-name">
+              <span>Nombre</span>
+              <span>Fernanda Vidal</span>
+            </div>
+            <div class="card__info-data-expiry">
+              <span>Fecha de vencimiento</span>
+              <span>09/20</span>
+            </div>
+            <div class="card__info-data-cvv">
+              <span>cvv</span>
+              <span>000</span>
+            </div>
+          </div>
         </div>
       </section>
       <section class="form">
