ADD: estilos en card

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <section class="card">
         <div class="card__info">
           <div class="card__info-card">
-            <img src="./visa.png" alt="card">
+            <img class="card__info-card-type" src="./visa.png" alt="card">
           </div>
           <div class="card__info-chip">
             <img src="./chip.png" alt="chip">
@@ -25,15 +25,15 @@
           <div class="card__info-data">
             <div class="card__info-data-name">
               <span>Nombre</span>
-              <span>Fernanda Vidal</span>
+              <span class="name">Fernanda Vidal</span>
             </div>
             <div class="card__info-data-expiry">
               <span>Fecha de vencimiento</span>
-              <span>09/20</span>
+              <span class="date">09/20</span>
             </div>
             <div class="card__info-data-cvv">
               <span>cvv</span>
-              <span>000</span>
+              <span class="cvv">000</span>
             </div>
           </div>
         </div>
