ADD: bloque de datos de tarjeta

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,12 @@
       <section class="card">
         <div class="card__info">
           <div class="card__info-card">
-            <img class="card__info-card-type" src="./visa.png" alt="card">
+            <img class="card__info-card-type" src="./visa.png" alt="card" />
           </div>
           <div class="card__info-chip">
-            <img src="./chip.png" alt="chip">
+            <img src="./chip.png" alt="chip" />
           </div>
           <div class="card__info-number-card">
-
             <p class="card__info-number"></p>
           </div>
           <div class="card__info-data">
@@ -40,25 +39,55 @@
       </section>
       <section class="form">
         <form id="form__card">
+          <label for="cardNumber" class="cardNumber labelData"
+            >Número de tarjeta</label
+          >
+          <input
+            type="text"
+            name="cardNumber"
+            class="numberCard inputData"
+            placeholder="Ej. 1234 5678 0000 0000"
           
-          <label for="cardNumber" class="cardNumber labelData">Número de tarjeta</label>
-          <input type="text" name="cardNumber" class="numberCard inputData" placeholder="Ej. 1234 5678 0000 0000">
+          />
           <span class="validText">Número de tarjeta válido.</span>
           <span class="errorText">Número de tarjeta inválido.</span>
-          <label for="cardName" class="cardName labelData">Nombre en la tarjeta</label>
-          <input type="text" name="cardName" class="nameCard inputData" placeholder="Ej. Fernanda Vidal">
-          <div class="card__data">
-            <div class="card__data-date">
-              <label for="cardDate" class="cardDate labelData">Fecha de vencimiento</label>
-              <input type="month" name="cardDate" class="dateCard inputData" placeholder="Ej. 19/01/23">
-            </div>
-            <div class="card__data-cvv">
-              <label for="cardCvv" class="cardCvv labelData">CVV</label>
-              <input type="text" name="cardCvv" class="cvvCard inputData" placeholder="Ej. 000" maxlength="3">
+          <div class="card__data-container">
+            <label for="cardName" class="cardName labelData"
+              >Nombre en la tarjeta</label
+            >
+            <input
+              type="text"
+              name="cardName"
+              class="nameCard inputData"
+              placeholder="Ej. Fernanda Vidal"
+            />
+            <div class="card__data">
+              <div class="card__data-date">
+                <label for="cardDate" class="cardDate labelData"
+                  >Fecha de vencimiento</label
+                >
+                <input
+                  type="month"
+                  name="cardDate"
+                  class="dateCard inputData"
+                  placeholder="Ej. 19/01/23"
+                />
+              </div>
+              <div class="card__data-cvv">
+                <label for="cardCvv" class="cardCvv labelData">CVV</label>
+                <input
+                  type="text"
+                  name="cardCvv"
+                  class="cvvCard inputData"
+                  placeholder="Ej. 000"
+                  maxlength="3"
+                />
+              </div>
             </div>
           </div>
-          <button class="btn">Agregar</button>
-          
+
+          <button class="btn">Validar</button>
+          <button class="btn btnSave">Guardar</button>
         </form>
       </section>
     </main>
