ADD:  branch img

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
       <section class="card">
         <div class="card__info">
           <div class="card__info-card">
-            <img class="card__info-card-type" src="./visa.png" alt="card" />
+            <img class="card__info-card-type" src="./img/visa.png" alt="card" />
           </div>
           <div class="card__info-chip">
-            <img src="./chip.png" alt="chip" />
+            <img src="./img/chip.png" alt="chip" />
           </div>
           <div class="card__info-number-card">
             <p class="card__info-number"></p>
